<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:id="@+id/item_view_layout"
    android:background="@drawable/cardview_borders"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="5dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardMaxElevation="1dp"
    card_view:cardElevation="1dp">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:orientation="vertical"
        android:layout_width="270dp"
        android:layout_height="100dp"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#109c87"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"

            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            />

        <TextView
            android:id="@+id/tv_expiration_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expiration_date"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="15dp"


            android:foreground="?android:attr/selectableItemBackground"
            />

        <TextView
            android:id="@+id/tv_boxes_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boxes_amount"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="15dp"
            android:foreground="?android:attr/selectableItemBackground" />

        <TextView
            android:id="@+id/tv_stipe_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stripes_amount"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"

            android:foreground="?android:attr/selectableItemBackground"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="280dp"
        android:layout_marginLeft="280dp"

        android:foreground="?android:attr/selectableItemBackground" />
</android.support.v7.widget.CardView>